# Beam-OTG

./: .gitignore  COPYING  README.md  asdf.py  bitacora.md  copyright  pou.py
IO/: input.txt
doc/: algrebra.ipynb  aroM.ipynb  doc.ipynb  elChiste.docx  readme.md  tseis.ipynb
doc/old/: encargo.ipynb  julio beams.ipynb  robot.ipynb
doc/old/deleteame/: matrices.ipynb
pocket/: algrebra.ipynb  aroM.ipynb  robot.ipynb
samples/: readme.md
samples/dibujos/: drawit.dxf
samples/dibujos/pizarra/: t.txt
samples/ejemplo1/: ejemplo.r2e
samples/ejemplo2/: asdf.r2d  ejemplo2.ods  ejemplo2.r2e
samples/ejemplo4/: asdf.r2d  dist2point.r2e  ejemplo4.ods
samples/ejemplo5/: asdf.r2d  ejemplo5.r3d  ejemplo5.r3d.prv  estatico.xls  marco.sdb
samples/risaModels/: _gw2de.def  _mem2ded.def  filesed.def
samples/risa_models/: marco1.r3d  qTrib.r2e
src/: DISCLAIMER  MANIFEST.in  readme  setup.cfg  setup.py
src/bbeam/: core.py  f.md  g.md  log.py  opti.py  pAPP.py  pou.py  temp.py
src/bbeam/dev/: algo.py
src/bbeam/tools/: copy.html  pstyle.css  template.html
temp/: temp.py
tests/: EJEML.r2e  bench.m  ejemplo.ods  gauss.m
tests/gauss/: bench.m  logs.txt
tests/risaModels/: marco1.r2d  marco1.r2e
