[egg_info]
tag_build = e
tag_date = 0

[bdist_wheel]
universal = 0

[metadata]
name = beta-beam
version = 0.0.5
author = Patricio C. V. - patod01
author_email = patod01@telegmail.com
description = This is a last hope to get a degree...
license = WTFPL
license_file = license
classifiers =
    License :: Freeware
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.9
platforms = windous

[options]
;;install_requires =
;;    numpy
;;    matplotlib
